# mlsub-rs

./: .gitignore  .rgignore  Cargo.toml  README.md
.github/workflows/: rust.yml
proptest-regressions/auto/reduce/: tests.txt
proptest-regressions/biunify/: tests.txt
src/: biunify.rs  cons.rs  lib.rs  polar.rs  trans.rs
src/auto/: build.rs  cmp.rs  flow.rs  graph.rs  mod.rs  reduce.rs  state.rs  trans.rs
src/auto/reduce/: mod.rs  tests.rs
src/auto/state/: mod.rs  set.rs
src/biunify/: bisubst.rs  mod.rs  reference.rs  tests.rs
src/subsume/: mod.rs
src/tests/: arbitrary.rs  build.rs  mod.rs
tests/: biunify.rs  build.rs  reduce.proptest-regressions  reduce.rs
tests/common/: arbitrary.rs  build.rs  mod.rs  polar.rs  sys.rs
