[package]
name = "mlsub"
description = "Template."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/mlsub"
documentation = "https://docs.rs/mlsub"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
im = "13"
seahash = "3.0.5"
itertools = "0.8.0"
lazy_static = "1.2.0"

[dependencies.small-ord-set]
git = "https://github.com/andrewhickman/small-ord-set"
rev = "3cbd25c658fa5570ac38460ca9f89f2b7b5d3818"

[dev-dependencies]
iter-set = "~1"
proptest = "0.9.0"
lazy_static = "1.2.0"
rand = "0.6.5"
