[package]
name = "mlsub"
description = "Template."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/mlsub"
documentation = "https://docs.rs/mlsub"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
im = "~15"
seahash = "~4"
itertools = "0.9.0"
small-ord-set = "0.1.1"
once_cell = "1.4.1"

[dev-dependencies]
iter-set = "~2"
proptest = "0.10.1"
lazy_static = "1.4.0"
rand = "0.7.3"
rand_distr = "0.3.0"
