[package]
name = "mlsub"
description = "Template."
version = "0.1.1"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/mlsub-rs"
documentation = "https://docs.rs/mlsub"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
im = "15.1.0"
seahash = "4.1.0"
itertools = "0.10.3"
small-ord-set = "0.1.3"
once_cell = "1.12.0"

[dev-dependencies]
iter-set = "2.0.2"
proptest = "1.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
